# Base-Cmd-Loop-App

./: CMakeLists.txt
scr/: console.cpp  console.hpp  core.cpp  core.hpp  main.cpp  main.hpp
scr/capi/: console_api.cpp  console_api.hpp
scr/cmd_scripts/: print_debug.cpp  print_debug.hpp
scr/console/: cmds_register.cpp  cmds_register.hpp  console.cpp  console.hpp
scr/cr/: commands_registry.hpp
src/: main.cpp
src/cr/: commands_registry.cpp
